<resources>
    <string name="app_name">MobileMiniProject</string>
    <string name="data_diri">Data Diri</string>
    <string name="national_id">National ID</string>
    <string name="fullname">Fullname</string>
    <string name="bank_account_no">Bank Account No</string>
    <string name="education">Education</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="please_select">Please Select</string>
    <string name="save">Save</string>
    <string name="alamat_ktp">Alamat KTP</string>
    <string name="domicile_address">Domicile Address</string>
    <string name="housing_type">Housing Type</string>
    <string name="no">No</string>
    <string name="province">Province</string>
    <string name="network_error">Network Error</string>
    <string name="review_data">Review Data</string>
</resources>