<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.DataDiriFragment"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        android:textColor="@color/general"
        android:textStyle="bold"
        android:text="@string/data_diri" />

    <TextView
        android:id="@+id/national_id_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        android:text="@string/national_id"
        android:layout_marginStart="16dp"/>

    <EditText
        android:id="@+id/national_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/selector_edittext"
        android:ems="10"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/national_id_name"
        android:gravity="top|start"
        android:maxLength="16"
        android:inputType="number"
        android:padding="10dp"
        android:textSize="16sp"
        android:autofillHints="@string/national_id"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/fullname_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/national_id"
        android:layout_marginTop="16dp"
        android:text="@string/fullname"
        android:layout_marginStart="16dp"/>

    <EditText
        android:id="@+id/fullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/selector_edittext"
        android:ems="10"
        android:digits="ABCDEFGHJIKMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullname_name"
        android:gravity="top|start"
        android:maxLength="10"
        android:inputType="text"
        android:padding="10dp"
        android:textSize="16sp"
        android:autofillHints="@string/national_id"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/bank_account_no_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullname"
        android:layout_marginTop="16dp"
        android:text="@string/bank_account_no"
        android:layout_marginStart="16dp"/>

    <EditText
        android:id="@+id/bank_account_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/selector_edittext"
        android:ems="10"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bank_account_no_name"
        android:gravity="top|start"
        android:inputType="number"
        android:padding="10dp"
        android:textSize="16sp"
        android:autofillHints="@string/national_id"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/education_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bank_account_no"
        android:layout_marginTop="16dp"
        android:text="@string/education"
        android:layout_marginStart="16dp"/>

    <RelativeLayout
        android:id="@+id/education"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/selector_edittext"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/education_name">

        <Spinner
            android:id="@+id/spEducation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:minHeight="0dp"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/arrow_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_dropdown_arrow"
            android:contentDescription="@string/app_name" />
    </RelativeLayout>

    <TextView
        android:id="@+id/date_of_birth_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/education"
        android:layout_marginTop="16dp"
        android:text="@string/date_of_birth"
        android:layout_marginStart="16dp"/>

    <RelativeLayout
        android:id="@+id/date_of_birth"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/selector_edittext"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_of_birth_name">

        <TextView
            android:id="@+id/tvTime"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/show_pass_btn"
            android:background="@android:color/transparent"
            android:lines="1"
            android:paddingHorizontal="16dp"
            android:text="@string/please_select" />

        <ImageView
            android:id="@+id/show_pass_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_bx_calendar"
            android:contentDescription="@string/app_name" />
    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="80dp"
        android:layout_marginHorizontal="48dp"
        android:background="@drawable/selector_button"
        android:enabled="false"
        android:foreground="?android:attr/selectableItemBackgroundBorderless"
        android:paddingHorizontal="64dp"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_of_birth" />

</androidx.constraintlayout.widget.ConstraintLayout>