<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clickable="true"
    android:focusable="true"
    android:background="@color/bg_screen"
    tools:context=".ui.AlamatKTPFragment"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title_actionbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/primary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:text="@string/alamat_ktp"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/icon_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/title_actionbar"
        app:layout_constraintBottom_toBottomOf="@+id/title_actionbar"
        android:layout_marginStart="16dp"
        android:src="@drawable/ic_back_arrow"
        app:tint="@color/white"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/domicile_address_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/title_actionbar"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="32dp"
        android:textColor="@color/general"
        android:layout_marginStart="16dp"
        android:text="@string/domicile_address"/>

    <EditText
        android:id="@+id/domicile_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/selector_edittext"
        android:ems="10"
        android:textColor="@color/general"
        android:digits="ABCDEFGHJIKMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/domicile_address_name"
        android:gravity="top|start"
        android:maxLength="100"
        android:inputType="number"
        android:padding="10dp"
        android:textSize="16sp"
        android:autofillHints="@string/national_id"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/housing_type_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/domicile_address"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        android:textColor="@color/general"
        android:layout_marginStart="16dp"
        android:text="@string/housing_type"/>

    <RelativeLayout
        android:id="@+id/housing_type"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/selector_edittext"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/housing_type_name">

        <Spinner
            android:id="@+id/spHousingType"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:minHeight="0dp"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/arrow_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_dropdown_arrow"
            android:contentDescription="@string/app_name" />
    </RelativeLayout>

    <TextView
        android:id="@+id/no_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/housing_type"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        android:textColor="@color/general"
        android:layout_marginStart="16dp"
        android:text="@string/no"/>

    <EditText
        android:id="@+id/no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/selector_edittext"
        android:ems="10"
        android:textColor="@color/general"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/no_name"
        android:gravity="top|start"
        android:inputType="text"
        android:padding="10dp"
        android:textSize="16sp"
        android:autofillHints="@string/national_id"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/province_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/no"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        android:textColor="@color/general"
        android:layout_marginStart="16dp"
        android:text="@string/housing_type"/>

    <RelativeLayout
        android:id="@+id/province"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/selector_edittext"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/province_name">

        <Spinner
            android:id="@+id/spProvince"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:minHeight="0dp"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/arrow_down_province"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_dropdown_arrow"
            android:contentDescription="@string/app_name" />
    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="80dp"
        android:layout_marginHorizontal="48dp"
        android:background="@drawable/selector_button"
        android:enabled="false"
        android:foreground="?android:attr/selectableItemBackgroundBorderless"
        android:paddingHorizontal="64dp"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/province" />

</androidx.constraintlayout.widget.ConstraintLayout>